scss/stylesheets/block.scss
$white: #ffffff;
$main_font: Azonix, serif;
$monospace: Monospace, monospace;
$body_back: #11111100;
$greyish: #4B4B4B;
$black: black;

@-webkit-keyframes hue {
  from {
    -webkit-filter: hue-rotate(0deg);
  }
  to {
    -webkit-filter: hue-rotate(-360deg);
  }
}

.block {
  z-index: 1;
}

#body {
  canvas {
    position: fixed;
    width: 100%;
    height: 100%;
    z-index: 0;
  }
}

.block-status-line {
  margin-top: .25rem;
  margin-bottom: .25rem;
  float: left;
  border-top: 1px solid rgba(125, 125, 125, .75);
  transition: ease-in-out 1s;

  @media (max-width: 576px) {
    width: 75%;
  }

  @media (min-width: 576px ){
    width: 430px;
  }

  @media (min-width: 768px) {
    width: 610px;
  }

  @media (min-width: 992px) {
    width: 820px;
  }

  @media (min-width: 1200px) {
    width: 900px;
  }
}
#add-function {
  display: block;
  height: 50px;
  width: 50px;
  border-radius: 100%;
  border: 3px solid #FFFFFF;
  background-color: $greyish;
  float: right;
  margin-top: -1.25rem;
}

.mechatronik {
  background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-animation: hue 10s infinite linear;
}

.nameChangeButton {
  color: $white;
  background-color: $black;
}

.nameChangeInput {
  color: $white;
  background-color: $black;
}

button {
  color: $white;
  background-color: $black;
}

input {
  color: $white;
  background-color: $black;
}


.status-icon {
  transition: ease-in-out 250ms;
  padding: 10px;
  box-sizing: border-box;
  width: 50px;
  height: 50px;
  margin: auto auto 15px;
  border-radius: 100%;


  &.greenicon {
    background: #00ff09;
  }

  &.redicon {
    background: #FF0000;
  }

  &.unknownicon {
    background: #808080;
  }
}

.block-title {
  display: flex;
}

@media (max-width: 992px) {
  .block-title {
    font-size: 1.5rem;
    font-weight: bolder;
  }
  * {
    font-family: $main_font;
    color: $white;
    font-size: 1rem;
  }
  .footertext {
    font-size: 0.5rem;
    display: inline-block;

    * {
      font-size: 0.5rem;
      display: inline-block;
    }
  }
  #block-mac {
    font-size: 0.75rem;
    font-family: $monospace;
    margin-top: -10px;
  }
  #block-lastactive {
    font-size: 1rem;
    font-family: $monospace;
    margin-top: -10px;
  }
}

@media (min-width: 992px) {
  .block-title {
    font-size: 2rem;
    font-weight: bolder;
  }
  * {
    font-family: $main_font;
    color: $white;
  }
  .footertext {
    font-size: .75rem;

    * {
      font-size: .75rem;
    }
  }
  #block-mac {
    font-size: 1rem;
    font-family: $monospace;
    margin-top: -10px;
  }
  #block-lastactive {
    font-size: 1rem;
    font-family: $monospace;
    margin-top: -10px;
  }
}


.set-button {
  background-color: rgba(0, 0, 0, 0.2);
  border: 1px solid #4E4E4E;
  margin-left: 10px;
  margin-right: 10px;
}

.state-button {
  background-color: rgba(0, 0, 0, 0.2);
  border: 1px solid #4E4E4E;
  margin-left: 10px;
  margin-right: 10px;
}

.diagram-button {
  background-color: rgba(0, 0, 0, 0.2);
  border: 1px solid #4E4E4E;
  margin-left: 10px;
  margin-right: 10px;
}
.text-button {
  background-color: rgba(0, 0, 0, 0.2);
  border: 1px solid #4E4E4E;
  margin-left: 10px;
  margin-right: 10px;
}

textarea {
  background: #000000;
  border: 0;
}
div.dataentry {
  //margin: auto;
  border: solid #535353 1px;
  margin: 5px 20px 5px 20px;

  background-image: linear-gradient(45deg, rgba(39, 42, 55, 0.92), rgba(30, 43, 56, 0.2));

  @media (max-width: 576px) {
    //display: none;
  }

  @media (min-width: 576px ){
    max-width: 500px;
  }

  @media (min-width: 768px) {
    max-width: 500px;
  }

  @media (min-width: 992px) {
    max-width: 600px;
  }

  @media (min-width: 1200px) {
    max-width: 900px;
  }

  div {
    text-align: center;
    font-size: 1.2rem;
    //margin: 5px 5px 5px 5px;
  }

}

.modal-content {
  background-color: rgba(0, 0, 0, 0) !important;
  border: 3px solid rgb(17, 49, 75) !important;
}

.modal {
  background-image: linear-gradient(45deg, rgba(39, 42, 55, .5), rgba(68, 86, 104, .2));
}

.modal-header {
  background-image: linear-gradient(45deg, rgba(39, 42, 55, .75), rgba(68, 86, 104, .75));
}

.modal-body {
  background-image: linear-gradient(45deg, rgba(39, 42, 55, 1), rgba(68, 86, 104, 1));
}

.modal-footer {
  background-image: linear-gradient(45deg, rgba(39, 42, 55, .75), rgba(68, 86, 104, .75));
}


body {
  background-image: linear-gradient(45deg, rgb(24, 25, 49), rgba(30, 81, 121, 1));
}


.graph {
  width: 100%
}


.module-name {
  border-bottom: 1px #535353 solid;
  margin: 0 0 0 0 !important;
  padding: 10px;
  background-color: rgba(0, 0, 0, 0.13);
}

.module-content {
  .graph-content {
    padding: 10px 10px 10px 10px;
    background-color: rgba(0, 0, 0, 0.25);
  }
  .state-content {
    border-bottom: 1px #535353 solid;
    margin: 0 0 0 0 !important;
    padding: 10px;
    background-color: rgba(0, 0, 0, 0.13);
  }
}

.pointy-cursor {
  cursor: pointer;
}

.reset-button {
  background-color: rgba(0, 0, 0, 0.2);
  border: 1px solid #4E4E4E;
  font-size: 1rem;
  align-self: center;
}

